# Allocator-Switcher

./: CAllocatedOn.h  CMakeLists.txt  CMemoryAllocationRedefinition.h  CMemoryManagerSwitcher.cpp  CMemoryManagerSwitcher.h  CStackAllocator.h  CStackOfManagers.h  CurrentMemoryManager.h  DefaultAllocator.h  GoogleTest.h  IMemoryManager.h  RuntimeHeap.h  XorList.h  main.cpp
